--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -41,7 +41,7 @@ file.reference.hibernate-commons-annotations-4.0.5.Final.jar=lib/hibernate-commo
 file.reference.hibernate-core-4.3.9.Final.jar=lib/hibernate-core-4.3.9.Final.jar
 file.reference.hibernate-entitymanager-4.3.9.Final.jar=lib/hibernate-entitymanager-4.3.9.Final.jar
 file.reference.hibernate-jpa-2.1-api-1.0.0.Final.jar=lib/hibernate-jpa-2.1-api-1.0.0.Final.jar
-file.reference.itext-2.1.7.jar=lib/itext-2.1.7.jar
+file.reference.itext-2.1.7.jar=lib\\itext-2.1.7.jar
 file.reference.jandex-1.1.0.Final.jar=lib/jandex-1.1.0.Final.jar
 file.reference.javassist-3.18.1-GA.jar=lib/javassist-3.18.1-GA.jar
 file.reference.javax.mail.jar=lib\\javax.mail.jar
@@ -151,6 +151,7 @@ javac.classpath=\
     ${file.reference.primefaces-6.1.jar}:\
     ${file.reference.commons-email-1.4.jar}:\
     ${file.reference.javax.mail.jar}:\
+    ${file.reference.itext-2.1.7.jar}:\
     ${file.reference.itext-2.1.7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
